# risk-sentinel

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  stop-dev.sh
.github/workflows/: ci.yml
db/: 001_schema.sql  002_seed_dev.sql  003_governance_rules.sql  004_mint_burn_rules.sql  005_approval_rules.sql  006_webhook_channels.sql  007_bridge_rules.sql  008_oracle_rules.sql
docker/: Dockerfile
include/sentinel/: db_checkpoint_store.hpp  json.hpp  log.hpp  model.hpp  version.hpp
include/sentinel/admin/: encrypt_secret.hpp
include/sentinel/app/: app.hpp
include/sentinel/chains/: ChainAdapter.hpp
include/sentinel/chains/arbitrum/: ArbitrumAdapter.hpp
include/sentinel/events/: EventSource.hpp  NormalizedEvent.hpp  RawLog.hpp  normalize.hpp
include/sentinel/events/utils/: hex.hpp
include/sentinel/health/: health_checks.hpp  health_server.hpp  heartbeat.hpp
include/sentinel/metrics/: metrics.hpp
include/sentinel/polling/: BlockPoller.hpp
include/sentinel/risk/: alert_channel.hpp  alert_deduplicator.hpp  alert_dispatcher.hpp  alert_formatter.hpp  approval_config.hpp  bridge_config.hpp  console_alert_channel.hpp  governance_config.hpp  mint_burn_config.hpp  oracle_config.hpp  risk_engine.hpp  rule_interface.hpp  signal.hpp  telegram_alert_channel.hpp  webhook_alert_channel.hpp
include/sentinel/risk/rules/: approval_rule.hpp  bridge_transfer_rule.hpp  example_rule.hpp  governance_rule.hpp  large_transfer_rule.hpp  mint_burn_rule.hpp  oracle_update_rule.hpp
include/sentinel/rpc/: JsonRpcClient.hpp
include/sentinel/security/: crypto.hpp
ops/grafana/dashboards/: risk-sentinel-overview.json
ops/grafana/provisioning/dashboards/: dashboard-provider.yml
ops/grafana/provisioning/datasources/: prometheus.yml
ops/prometheus/: prometheus.yml
scripts/: db_apply.sh
src/: db_checkpoint_store.cpp  log.cpp  main.cpp
src/admin/: encrypt_secret.cpp
src/app/: app.cpp
src/chains/arbitrum/: ArbitrumAdapter.cpp
src/events/: EventSource.cpp  normalize.cpp
src/health/: health_checks.cpp  health_server.cpp
src/metrics/: metrics.cpp
src/polling/: BlockPoller.cpp
src/risk/: alert_deduplicator.cpp  alert_dispatcher.cpp  alert_formatter.cpp  console_alert_channel.cpp  risk_engine.cpp  telegram_alert_channel.cpp  webhook_alert_channel.cpp
src/risk/rules/: approval_rule.cpp  bridge_transfer_rule.cpp  governance_rule.cpp  mint_burn_rule.cpp  oracle_update_rule.cpp
src/rpc/: JsonRpcClient.cpp
src/security/: crypto.cpp
tests/: CMakeLists.txt  test_alert_deduplicator.cpp  test_alert_formatter.cpp  test_approval_normalize.cpp  test_approval_rule.cpp  test_basic.cpp  test_bridge_transfer_rule.cpp  test_crypto.cpp  test_governance_normalize.cpp  test_governance_rule.cpp  test_health_checks.cpp  test_large_transfer_rule.cpp  test_mint_burn_normalize.cpp  test_mint_burn_rule.cpp  test_model_json.cpp  test_oracle_normalize.cpp  test_oracle_update_rule.cpp  test_regression_existing_flows.cpp  test_webhook_alert_channel.cpp
